<resources>
    <string name="app_name">M-TIBA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hamburger_menu">HamburgerMenuActivity</string>
    <string name="my_benefits">My Benefits</string>
    <string name="find_clients">Find Clinics</string>
    <string name="my_dependants">My Dependants</string>
    <string name="help">Terms and Conditions</string>
    <string name="enter_till_number">Enter 6-digit till number</string>
    <string name="title_activity_maps">Map</string>

    <string name="splash_welcome">Welcome to</string>
    <string name="numb">Enter phone number</string>
    <string name="my_number">Check</string>
    <string name="dte">date</string>
    <string name="new_mail">mail</string>
    <string name="gender">gender</string>
    <string name="my_login">Create Login</string>
    <string name="create_new">Create</string>
    <string name="lock">pin lock</string>
    <string name="wel_mtiba">mtiba</string>
    <string name="wel_header">welcome</string>
    <string name="register">REGISTER</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="terms">I agree to terms and </string>
    <string name="hint_uname">Enter Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prof_logout">Logout</string>
    <string name="policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="prof_home">Home</string>
    <string name="logout">Logout</string>
    <string name="login_btn">Login</string>
    <string name="hint_password">Enter Pin</string>
    <string name="login_forgotpass">Forgot Password ?</string>
    <string name="login_not_member">Not a Member ?</string>
    <string name="signup_link">Sign Up</string>

<string name="new_uname">Enter Username</string>
<string name="new_email">Enter Email Address</string>
<string name="new_terms">Accept terms and</string>
<string name="andcond">Conditions</string>register
<string name="reg_user">Register</string>
    <string name="our_terms">
    The use of this website is subject to the following terms of use:

The content of the pages of this website is for your general information and use only. It is subject to change without notice.
This website uses cookies to monitor browsing preferences. If you do allow cookies to be used, the following personal information may be stored by us for use by third parties: [insert list of information].
Neither we nor any third parties provide any warranty or guarantee as to the accuracy, timeliness, performance, completeness or suitability of the information and materials found or offered on this website for any particular purpose. You acknowledge that such information and materials may contain inaccuracies or errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent permitted by law.
Your use of any information or materials on this website is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this website meet your specific requirements.
This website contains material which is owned by or licensed to us. This material includes, but is not limited to, the design, layout, look, appearance and graphics. Reproduction is prohibited other than in accordance with the copyright notice, which forms part of these terms and conditions.
All trade marks reproduced in this website which are not the property of, or licensed to, the operator are acknowledged on the website.
Unauthorised use of this website may give rise to a claim for damages and/or be a criminal offence.
From time to time this website may also include links to other websites. These links are provided for your convenience to provide further information. They do not signify that we endorse the website(s). We have no responsibility for the content of the linked website(s).
Your use of this website and any dispute arising out of such use of the website is subject to the laws of England, Northern Ireland, Scotland and Wales.

</string>

</resources>
