<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cav.m_tiba.ui.HamburgerMenuActivity"
    tools:showIn="@layout/app_bar_hamburger_menu">

    <Button
        android:id="@+id/myBenefits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="@string/my_benefits"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/findClients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/find_clients"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/myBenefits"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/myDependants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_dependants"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/findClients"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Contacts"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/myDependants"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/contacts"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"/>

    <TextView
        android:id="@+id/tillText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/helpButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
